WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
304604
[blocks-in-inline] Assertion in InlineItemsBuilder::collectInlineItems on facebook.com
https://bugs.webkit.org/show_bug.cgi?id=304604
Summary
[blocks-in-inline] Assertion in InlineItemsBuilder::collectInlineItems on fac...
alan
Reported
2025-12-22 10:45:17 PST
<
rdar://167021537
>
Attachments
[fast-cq]Patch
(2.77 KB, patch)
2025-12-22 10:53 PST
,
alan
koivisto
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
alan
Comment 1
2025-12-22 10:53:19 PST
Created
attachment 477825
[details]
[fast-cq]Patch
EWS
Comment 2
2025-12-22 12:38:03 PST
Committed
304869@main
(70277741f732): <
https://commits.webkit.org/304869@main
> All reviewed patches have been landed. Closing bug and clearing flags on
attachment 477825
[details]
.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug