[blocks-in-inline] Assertion in InlineItemsBuilder::collectInlineItems on facebook.com https://bugs.webkit.org/show_bug.cgi?id=304604 <rdar://167021537>

Reviewed by Simon Fraser.

'display: -webkit-box' (deprecated flex box) is a block level box and should be handled as such.

Test: fast/block/inside-inlines/missing-deprecated-flex-box-content.html

* LayoutTests/fast/block/inside-inlines/missing-deprecated-flex-box-content-expected.html: Added.
* LayoutTests/fast/block/inside-inlines/missing-deprecated-flex-box-content.html: Added.
* Source/WebCore/layout/layouttree/LayoutBox.cpp:
(WebCore::Layout::Box::isBlockLevelBox const):

Canonical link: https://commits.webkit.org/304869@main